--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet"
     />
-    <title></title>
+    <title>Bamboo</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
